<resources>
  <string name="app_name">AndroidTut</string>
  <string name="title_activity_result">ResultActivity</string>
  <string name="male">Hombre</string>
  <string name="female">Mujer</string>
  <string name="height">Altura</string>
  <string name="weight">Peso</string>
  <string name="age">Edad</string>
  <string name="calculate">Calcular</string>
  <string name="recalculate">Re-Calcular</string>
  <string name="result">Tu resultado </string>

  <string name="error">Error</string>

  <string name="title_low_weight">Bajo peso</string>
  <string name="description_low_weight">Estás por debajo de tu peso óptimo para tu peso y altura.</string>

  <string name="title_normal_weight">Peso normal</string>
  <string name="description_normal_weight">Estás en tu peso óptimo para tu peso y altura.</string>

  <string name="title_over_weight">Sobrepeso</string>
  <string name="description_over_weight">Estás por encima de tu peso óptimo para tu peso y altura.</string>


  <string name="title_obesity_weight">Obesidad</string>
  <string name="description_obesity_weight">Estás MUY por encima de tu peso óptimo para tu peso y altura.</string>

  <!--todoapp-->
  <string name="todo_title">Bienvenido, ¿Que quieres hacer hoy?</string>
  <string name="todo_categories">Categorias</string>
  <string name="todo_tasks">Tareas</string>


  <string name="todo_category_business">Trabajo</string>
  <string name="todo_category_personal">Personal</string>
  <string name="todo_category_others">Otros</string>


  <string name="todo_dialog_add_task">Añadir tarea</string>
  <string name="todo_dialog_btb_add_task">Crear tarea</string>

  <!-- aplicación de settings -->

  <string name="settings_dark_mode_title">Modo oscuro</string>
  <string name="settings_dark_mode_description">Activa el modo oscuro para un cambio visual"</string>

  <string name="settings_bluetooth_mode_title">Bluetooth</string>
  <string name="settings_bluetooth_mode_description">Activa el bluetooth como comunicación"</string>

  <string name="settings_volume_title">Sonido</string>


  <string name="settings_vibration_title">Vibración</string>
  <string name="settings_vibration_description">Activa o desactiva Vibración en llamadas"</string>


</resources>