<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/main"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".settings.SettingsActivity">

  <!--- de ejemplo de como se hace uno de las filas de settings seria
  replicar pero en lugar de replicar refactorizariamos haciendo un componente-->


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:src="@drawable/ic_dark_mode">
    </ImageView>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_gravity="center_vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_dark_mode_title"
        android:textColor="@color/settings_text_title"
        ></TextView>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_dark_mode_description"
        android:textSize="11sp"
        ></TextView>
    </LinearLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switchDarkMode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp">
    </com.google.android.material.switchmaterial.SwitchMaterial>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:src="@drawable/ic_bluetooth">
    </ImageView>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_gravity="center_vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_bluetooth_mode_title"
        android:textColor="@color/settings_text_title"
        ></TextView>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_bluetooth_mode_description"
        android:textSize="11sp"
        ></TextView>
    </LinearLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switchBluetooth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp">
    </com.google.android.material.switchmaterial.SwitchMaterial>

  </LinearLayout>

  <com.google.android.material.divider.MaterialDivider
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginVertical="8dp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:src="@drawable/ic_volume">
    </ImageView>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_gravity="center_vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_volume_title"
        android:textColor="@color/settings_text_title"
        ></TextView>

      <com.google.android.material.slider.RangeSlider
        android:id="@+id/rsVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="100"
        ></com.google.android.material.slider.RangeSlider>

    </LinearLayout>


  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:src="@drawable/ic_vibration">
    </ImageView>
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_gravity="center_vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_vibration_title"
        android:textColor="@color/settings_text_title"
        ></TextView>

    </LinearLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switchVibration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp">
    </com.google.android.material.switchmaterial.SwitchMaterial>

  </LinearLayout>
  <com.google.android.material.divider.MaterialDivider
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginVertical="8dp"/>


</LinearLayout>